[gd_scene load_steps=2 format=2]

[ext_resource path="res://RoomDetails/RoomDetails.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.594604
margin_right = -0.594604
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="WindowDialog" parent="."]
visible = true
margin_left = 300.727
margin_top = 130.205
margin_right = 746.727
margin_bottom = 469.205
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Room_Name" type="Label" parent="Panel"]
margin_left = 98.791
margin_top = 20.985
margin_right = 338.791
margin_bottom = 62.985
text = "Nom de la chambre"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Nb_Player" type="Label" parent="Panel"]
margin_left = 203.125
margin_top = 59.6902
margin_right = 243.125
margin_bottom = 73.6902
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Password" type="TextEdit" parent="Panel"]
margin_left = 140.273
margin_top = 111.795
margin_right = 316.273
margin_bottom = 133.795
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Pwd_Label" type="Label" parent="Panel"]
margin_left = 71.462
margin_top = 113.39
margin_right = 140.462
margin_bottom = 132.39
text = "Password:"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Entrer" type="Button" parent="Panel"]
margin_left = 139.108
margin_top = 198.634
margin_right = 316.108
margin_bottom = 243.634
text = "Entrer"
__meta__ = {
"_edit_lock_": true
}
[connection signal="popup_hide" from="Panel" to="." method="_on_Panel_popup_hide"]
[connection signal="pressed" from="Panel/Entrer" to="." method="_on_Entrer_pressed"]
